2008-04-09  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Add another magic pattern for FLAC files
	inside Ogg, patch by Andrés Gómez García <agomez@igalia.com>
	(Closes: #14501)

2008-04-09  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Remove *.exe as a pattern for Unix/ELF
	executables (Closes: #12569)

2008-04-09  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Add a pattern for AWK files

2008-04-09  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Add a pattern for mbox files, as used
	by KMail

2008-04-09  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in:
	* tests/list: Add a pattern for PCX files, fix the test suite
	accordingly

2008-04-09  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Remove audio/x-mp3-playlist (no pattern,
	no magic) and make it an alias for m3u playlists

2008-04-09  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Add a mime-type for NFO files, patch by
	Osmo Salomaa <otsaloma@cc.hut.fi> (Closes: #12721)

2008-04-09  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in:
	* tests/list:
	* tests/test.fl: Add FLTK Fluid mime-type and test files. Patch from
	Sanel Zukan <sanelz@gmail.com> (Closes: #14329)

2008-04-09  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Remove useless application/x-dbm
	mime-type, it didn't have a comment, or an users (Closes: #15223)

2008-04-09  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Make application/x-flash-video an alias,
	and have the top-level mime-type be video/x-flv, so apps can use
	video/ to filter it (Closes: #14982)

2008-03-28  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Add application/x-redhat-package-manager
	as an alias for RPM

2008-03-26  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in:
	* tests/list:
	* tests/test.ext,v: Add *,v files from RCS to the
	text/plain files, add a test
